Refactoriza la lógica de negocio